# website

./: .dockerignore  .env  .env.example  Cargo.toml  Dockerfile  README.md  diesel.toml  docker-compose.yml  fly.toml  package-lock.json  package.json  server.ts  tailwind.config.js  tsconfig.json
.giithub/workflow/: deploy.yml
.github/workflows/: deploy.yml
app/: Cargo.toml  entry.client.tsx  entry.server.tsx  i18next.server.ts  root.tsx  tailwind.css
app/components/containers/: Navbar.tsx
app/components/elements/: Text.tsx  Title.tsx
app/routes/: _index.tsx
app/src/: components.rs  lib.rs  pages.rs  posts.rs
app/src/components/: background.rs  navigation.rs
app/src/pages/: blog.rs  blog_post.rs  home.rs
app/src/posts/: tanstack_forms.md
config/: Cargo.toml
config/src/: lib.rs
database/: Cargo.toml
database/migrations/2025-06-10-205701_init_user/: up.sql
database/src/: connection.rs  lib.rs  models.rs  schema.rs
frontend/src/: lib.rs
public/locales/en/: common.json
server/: Cargo.toml
server/src/: main.rs
src/: app.rs  main.rs
style/: tailwind.css
